# Pigeonhole

./: .gitignore  Pigeonhole.cabal  README.md
src/: Base.hs  Encoding.hs  Evaluation.hs  Evaluation.md  Lib.hs  Main.hs  Problem.hs  Statistics.hs  Statistics.md
src/AtMostK/: Binary.hs  Binomial.hs  Commander.hs  Counter.hs  Product.hs
src/Conventional/: Binary.hs  Binomial.hs  Commander.hs  Counter.hs  Product.hs
