name:                ApproximateAtMostK
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/snisimu/ApproximateAtMostK#readme
license:             BSD3
license-file:        LICENSE
author:              Shunji Nishimura
maintainer:          snisimu@gmail.com
copyright:           2022 Shunji Nishimura
category:            Research
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ApproximateAtMostK
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
  other-modules:        Base
                      , Lib
                      , Conventional.Binomial
                      , Conventional.Binary
                      , Conventional.Counter
                      , Conventional.Commander
                      , Conventional.Product
                      , Encoding
                      , Evaluation
                      , Problem
                      , Statistics
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , filepath
                     , strict
                     , random
                     , process
                     , extra
